# notif

./: .dockerignore  .env.example  .gitignore  .notif.json  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Makefile  PRD.md  README.md  SELFHOST.md  TEST_PR.md  docker-compose.selfhost.yaml  docker-compose.yaml  docker-compose.yml  entrypoint.sh  federation.example.yaml  go.mod  go.sum  install.sh  interceptors.example.yaml  leafnode.example.conf  nats-server.conf
.genie/: DREAM-REPORT.md  DREAM.md  brainstorm.md
.github/workflows/: deploy.yml  docker.yml  release.yml  test.yml
cmd/notif/: main.go
cmd/notifd/: main.go
crates/notif-cli/: Cargo.toml
crates/notif-cli/src/: main.rs
crates/notif-cli/src/commands/: add.rs  approve.rs  clear.rs  dismiss.rs  hook.rs  init.rs  ls.rs  mod.rs  read.rs  remote.rs  server.rs
crates/notif-core/: Cargo.toml
crates/notif-core/src/: client.rs  config.rs  db.rs  lib.rs  models.rs  remotes.rs  sync.rs
crates/notif-server/: Cargo.toml
crates/notif-server/src/: auth.rs  config.rs  error.rs  lib.rs  server.rs
crates/notif-server/src/routes/: api.rs  mod.rs  webhook.rs
crates/notif-ui/: index.html  package-lock.json  package.json  vite.config.js
crates/notif-ui/src-tauri/: Cargo.toml  tauri.conf.json
crates/notif-ui/src-tauri/icons/: icon.icns
crates/notif-ui/src-tauri/src/: main.rs
db/: sqlc.yaml
db/migrations/: 001_initial.sql  002_webhooks.sql  003_multi_tenancy.sql  004_remove_environment.sql  005_webhooks_org_scope.sql  006_event_deliveries.sql  007_fix_event_deliveries_constraint.sql  008_events_org_scope.sql  009_scheduled_events.sql  010_projects.sql  011_add_project_id.sql  012_migrate_default_projects.sql  013_schemas.sql  014_audit_log.sql  015_create_orgs.sql  016_orgs_backfill.sql  017_orgs_fks.sql  018_orgs_account_seed.sql
db/queries/: apikeys.sql  audit.sql  deliveries.sql  events.sql  orgs.sql  projects.sql  schedules.sql  schemas.sql  stats.sql  webhooks.sql
docs/: SCHEMA_FEATURE.md  SECURITY.md  federation-design.md  operator-seed-rotation.md
examples/agent-management/: Cargo.toml  README.md  tauri.conf.json
examples/agent-management/.schem/baseline/: agent.json  agentevent.json  agentmessage.json  permissionrequest.json  permissionresponse.json  sessioninfo.json  toolinputs.json
examples/agent-management/capabilities/: default.json
examples/agent-management/schemas/: agent-event.yaml  agent-message.yaml  agent.yaml  permission-request.yaml  permission-response.yaml  schem.yaml  session-info.yaml
examples/agent-management/src/: lib.rs  main.rs
examples/agent-management/ui/: index.html
examples/agent-management/worker/: executor.ts  index.ts  package.json  session.ts  test-executor.ts  types.ts  worker.ts  worktree.ts
examples/agent-swarm/: PROPOSAL.md
examples/claude-workers/: README.md  client.py  worker.py
examples/modular-desktop/: Cargo.toml  README.md
examples/modular-desktop/event-log/: Cargo.toml  tauri.conf.json
examples/modular-desktop/event-log/capabilities/: default.json
examples/modular-desktop/event-log/src/: lib.rs  main.rs
examples/modular-desktop/event-log/ui/: index.html
examples/modular-desktop/hub/: Cargo.toml  tauri.conf.json
examples/modular-desktop/hub/capabilities/: default.json
examples/modular-desktop/hub/src/: lib.rs  main.rs
examples/modular-desktop/hub/ui/: index.html
examples/modular-desktop/toast/: Cargo.toml  tauri.conf.json
examples/modular-desktop/toast/capabilities/: default.json
examples/modular-desktop/toast/src/: lib.rs  main.rs
examples/modular-desktop/toast/ui/: index.html
examples/notif-tts/: README.md  tts.py
examples/policies/: development.yaml  example-org.yaml  filipe-ai.yaml
homebrew/: notif.rb
internal/accounts/: accounts.go  jwt.go  keys.go  keys_test.go  limits.go  limits_test.go
internal/audit/: audit.go  audit_test.go
internal/bridge/: bridge.go  bridge_test.go  config.go  service.go  status.go
internal/cli/: CHANGELOG.md
internal/codegen/: config.go  generate.go  golang.go  ir.go  schema.go  typescript.go
internal/config/: config.go
internal/db/: apikeys.sql.go  audit.sql.go  deliveries.sql.go  events.sql.go  models.go  orgs.sql.go  projects.sql.go  schedules.sql.go  schemas.sql.go  stats.sql.go  webhooks.sql.go
internal/domain/: apikey.go  event.go  project.go
internal/federation/: client.go  federation.go  federation_test.go
internal/handler/: apikey.go  audit.go  bootstrap.go  dlq.go  emit.go  events.go  health.go  org.go  org_test.go  pool_health.go  project.go  schedules.go  schemas.go  stats.go  subscribe.go  terminal.go  webhook.go
internal/interceptor/: config.go  interceptor.go  interceptor_test.go  manager.go
internal/middleware/: auth.go  clerk.go  logging.go  ratelimit.go  ratelimit_test.go  unified.go
internal/nats/: client.go  consumer.go  dlq.go  embedded.go  embedded_test.go  leafnode_test.go  pool.go  publisher.go  reader.go
internal/policy/: audit_publisher.go  enforcer.go  enforcer_test.go  loader.go  matcher.go  matcher_test.go  types.go
internal/scheduler/: worker.go
internal/schema/: binding.go  converter.go  converter_test.go  matcher.go  matcher_test.go  parser.go  parser_test.go  publish.go  registry.go  storage.go  types.go  validator.go  validator_test.go
internal/security/: ssrf.go  ssrf_test.go
internal/server/: routes.go  server.go
internal/terminal/: terminal.go
internal/webhook/: worker.go
internal/websocket/: client.go  hub.go  protocol.go
pkg/client/: audit.go  client.go  dlq.go  emit.go  errors.go  events.go  health.go  schedules.go  schemas.go  subscribe.go  subscribe_test.go  webhooks.go
scripts/: genkey.go  seed.sql
sdk/python/: pyproject.toml
sdk/rust/: Cargo.toml  README.md
sdk/rust/examples/: emit.rs  subscribe.rs
sdk/rust/src/: client.rs  error.rs  lib.rs  subscribe.rs  types.rs
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json  (+2 more)
src/: db.rs  main.rs  models.rs
web/: .cta.json  .env.example  CLAUDE.md  DESIGN.md  app.config.ts  package-lock.json  package.json  vite.config.ts
(+139 files in other folders)
