[package]
name = "notif"
version = "0.1.0"
edition = "2021"
description = "Claude Code notification center"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
rusqlite = { version = "0.37", features = ["bundled"] }
directories = "6.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"
anyhow = "1.0"
dirs-next = "2.0"
