[workspace]
resolver = "2"
members = ["crates/notif-core", "crates/notif-cli", "crates/notif-server", "crates/notif-ui/src-tauri"]

[workspace.package]
version = "0.1.0"
edition = "2021"

[workspace.dependencies]
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] }
colored = "3.0"
directories = "6.0"
dirs-next = "2.0"
rusqlite = { version = "0.37", features = ["bundled"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.5", features = ["derive"] }
