[package]
name = "notif-core"
version.workspace = true
edition.workspace = true
description = "Core library for notif - notification center for LLMs"

[dependencies]
anyhow.workspace = true
chrono.workspace = true
directories.workspace = true
rusqlite.workspace = true
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
reqwest.workspace = true
