[package]
name = "notif-server"
version.workspace = true
edition.workspace = true
description = "HTTP server for notif with webhook support"

[dependencies]
notif-core = { path = "../notif-core" }
axum = "0.8"
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "trace"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rand = "0.8"
anyhow.workspace = true
dirs-next.workspace = true
