[workspace]
resolver = "2"
members = ["hub", "toast", "event-log"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace.dependencies]
notifsh = { path = "../../sdk/rust" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "sync"] }
tauri = { version = "2", features = ["macos-private-api"] }
tauri-build = "2"
futures = "0.3"
futures-util = "0.3"
uuid = { version = "1", features = ["v4"] }
chrono = { version = "0.4", features = ["serde"] }
