[package]
name = "notif-ui"
version.workspace = true
edition.workspace = true
description = "Notification center UI for LLMs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
notif-core = { path = "../../notif-core" }
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-single-instance = "2"
