[package]
name = "hub"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
notifsh = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
uuid = { workspace = true }
futures-util = { workspace = true }

[lib]
name = "hub_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
