[package]
name = "toast"
version.workspace = true
edition.workspace = true

[build-dependencies]
tauri-build = { workspace = true }

[dependencies]
notifsh = { workspace = true }
tauri = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
futures-util = { workspace = true }

[lib]
name = "toast_lib"
crate-type = ["staticlib", "cdylib", "rlib"]
